--- a/app/views/devise/mailer/confirmation_instructions.text.erb
+++ b/app/views/devise/mailer/confirmation_instructions.text.erb
@@ -2,6 +2,6 @@
 
 <%= I18n.t('core.confirmation_email_2') %>
 
-<%= Account.current.url_base + confirmation_path(@resource, :confirmation_token => @resource.confirmation_token, :locale => DmCore::Language.locale) %>
+<%= Account.current.url_base + confirmation_path(@resource, :confirmation_token => @token, :locale => DmCore::Language.locale) %>
 
 <%= I18n.t('core.confirmation_email_3') %>
