--- a/app/views/devise/mailer/reset_password_instructions.text.erb
+++ b/app/views/devise/mailer/reset_password_instructions.text.erb
@@ -2,7 +2,7 @@
 
 <%= I18n.t('core.reset_password_email_2') %>
 
-<%= Account.current.url_base + edit_password_path(@resource, :reset_password_token => @resource.reset_password_token, :locale => DmCore::Language.locale) %>
+<%= Account.current.url_base + edit_password_path(@resource, :reset_password_token => @token, :locale => DmCore::Language.locale) %>
 
 <%= I18n.t('core.reset_password_email_3') %>
 
