--- a/core/app/views/devise/mailer/reset_password_instructions.html.erb
+++ b/core/app/views/devise/mailer/reset_password_instructions.html.erb
@@ -2,7 +2,7 @@
 
 <p><%= I18n.t('core.reset_password_email_2') %></p>
 
-<p><%= link_to I18n.t('core.reset_password_email_link'), Account.current.url_base + edit_password_path(@resource, :reset_password_token => @resource.reset_password_token, :locale => DmCore::Language.locale), class: 'button' %></p>
+<p><%= link_to I18n.t('core.reset_password_email_link'), Account.current.url_base + edit_password_path(@resource, :reset_password_token => @token, :locale => DmCore::Language.locale), class: 'button' %></p>
 
 <p><%= I18n.t('core.reset_password_email_3') %></p>
 
