--- a/core/app/views/devise/mailer/unlock_instructions.html.erb
+++ b/core/app/views/devise/mailer/unlock_instructions.html.erb
@@ -4,4 +4,4 @@
 
 <p><%= I18n.t('core.unlock_email_3') %></p>
 
-<p><%= link_to I18n.t('core.unlock_email_link'), Account.current.url_base + unlock_path(@resource, :unlock_token => @resource.unlock_token, :locale => DmCore::Language.locale), class: 'button' %></p>
+<p><%= link_to I18n.t('core.unlock_email_link'), Account.current.url_base + unlock_path(@resource, :unlock_token => @token, :locale => DmCore::Language.locale), class: 'button' %></p>
