--- a/event/app/views/layouts/email_templates/dm_event_payment_reminder.html.erb
+++ b/event/app/views/layouts/email_templates/dm_event_payment_reminder.html.erb
@@ -1,19 +1,22 @@
-<p><%= I18n.t('email.salutation', :value => h(@registration.full_name)) %></p>
+<%= markdown do %>
+<%= I18n.t('email.salutation', :value => h(@registration.full_name)) %>
 
-<p><%= I18n.t('ems.ticket_registered_following_event') %>:</p>
+<%= I18n.t('ems.ticket_registered_following_event') %>:
 
-<p><strong><%=h @registration.workshop.title %></strong></p>
+**<%=h @registration.workshop.title %>**
 
-<p><%= I18n.t('ems.ticket_outstanding_balance') %>:</p>
+<%= I18n.t('ems.ticket_outstanding_balance') %>:
 
-<p><strong><%= @payment_owed %></strong></p>
+**<%= @payment_owed %>**
 
-<p><%= I18n.t('ems.ticket_payment_link_leadin' )%>::</p>
+<%= I18n.t('ems.ticket_payment_link_leadin' )%>:
 
-<p><%= link_to I18n.t('ems.ticket_payment_link_text'), @payment_link %></p>
+[<%= I18n.t('ems.ticket_payment_link_text') %>](<%= @payment_link %>)
 
-<p><%= I18n.t('ems.ticket_if_already_paid', :value => h(@registration.workshop.contact_email))%></p>
+<%= I18n.t('ems.ticket_receipt_questions', :value => h(@registration.workshop.contact_email)) %>
 
-<p><%= I18n.t('ems.ticket_receipt_questions', :value => h(@registration.workshop.contact_email)) %></p>
+<%= I18n.t('email.thank_you') %>
 
-<p><%= I18n.t('email.thank_you') %></p>
+<small>_<%= I18n.t('ems.ticket_if_already_paid', :value => h(@registration.workshop.contact_email))%>_</small>
+
+<% end %>
