--- a/forum/app/views/dm_forum/admin/forums/show.html.erb
+++ b/forum/app/views/dm_forum/admin/forums/show.html.erb
@@ -45,7 +45,7 @@
             </tr>
           </thead>
           <tbody>
-            <% @forum.member_list.each do |user| %>
+            <% @forum.member_list(:manual).each do |user| %>
               <tr>
                 <td><%= link_to(icons("icon-minus"), dm_forum.forum_delete_member_admin_forum_path(@forum, user_id: user.id), method: :delete, title: 'Remove Access') + "&nbsp;&nbsp;".html_safe + user.full_name %></td>
                 <td><%= user.country.english_name %></td>
