add acts_as_taggable_on and account media settings

--- a/app/views/dm_core/admin/accounts/_sidebar.html.erb
+++ b/app/views/dm_core/admin/accounts/_sidebar.html.erb
@@ -11,4 +11,5 @@
   <li><%= link_to "Site Wide".html_safe, dm_core.admin_account_metadata_path %></li>
   <li><%= link_to "Email".html_safe, dm_core.admin_account_email_path %></li>
   <li><%= link_to "Analytics &amp; Payments".html_safe, dm_core.admin_account_analytics_path %></li>
+  <li><%= link_to "Media".html_safe, dm_core.admin_account_media_path %></li>
 </ul>
